Make a link preview

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,14 @@
         <meta charset="utf-8" />
         <meta name="HandheldFriendly" content="true" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+        <meta property="og:site_name" content="Marek Topolewski"/>
+        <meta property="og:title" content="M Topolewski"/>
+        <meta property="og:description" content="Online portfolio, blog or website.. Call it whatever you would like, here you can find out more about me and get in touch."/>
+        <meta property="og:image" content="api/preview.jpg">
+        <meta property="og:url" content="https://www.mtopolewski.com/">
+        <meta property="og:type" content="blog"/>
+
         <title>Marek Topolewski</title>
     </head>
     <body>
